Work done today

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,7 @@ like the navbar. -->
             {% for message in messages %}
             <div class="mx-5 me-4 border-bottom px-1 col-md-3"><mark>{{ message }}</mark></div>
             {% endfor %}
-            <hr class="mt-1" style="height:2px;border-width:0;color:gray;background-color:gray">
+            <hr class="mt-1" style="height:2px;border-width:0;color:blue;background-color:blue">
             </div>
           </div>
         {% endif %}
