--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<h1>Hello Worl</h1>
+<h1>Hello welcome to maycoandmax appp</h1>
+<img src="/static/meme.png" alt="Meme Man" width="150">
 <br><br><br>
 {% endblock %}
