--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -1,24 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid mb-3">
-    <a class="navbar-brand .navbar-text display-1 font-weight-bold" href="/">Home</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 display-7" style="margin: 0% 37%;"> 
-        <li class="nav-item">
-          <a class="nav-link" href="/blogs">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/reviews">Review</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Clinics
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/clinic/map">Map</a></li>
-            <li><a class="dropdown-item" href="/clinic/list">List</a></li>
+      <a class="navbar-brand" href="/">Home of maxandmayco app</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                  <a class="nav-link" href="/aboutus">About Us</a>  <!-- Added About Us link -->
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/blogs">Blog</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/reviews">Review</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/clinic/map">Map of Oakland</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/clinic/list">List</a>
+              </li>
           </ul>
         </li>
         <li>
@@ -27,7 +29,7 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         {% if current_user.is_anonymous %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+            <a class="nav-link" href="{{ url_for('login') }}">Login HERE</a>
 
           </li>
         {% else %}
@@ -38,7 +40,7 @@
             
           </li>          
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout HERE</a>
           </li>
           {% endif %}
         </li>
