--- a/app/templates/profileform.html
+++ b/app/templates/profileform.html
@@ -33,10 +33,25 @@
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
+
         <p>
             {{ form.role.label }}<br>
             {{ form.role() }}<br>
             {% for error in form.role.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.league_category.label }}<br>
+            {{ form.league_category() }}<br>
+            {% for error in form.league_category.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.age.label }}<br>
+            {{ form.age() }}<br>
+            {% for error in form.age.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
