--- a/app/templates/profilemy.html
+++ b/app/templates/profilemy.html
@@ -25,6 +25,10 @@
 
 
     </div>
+
+     Role: {{current_user.role}} <br>
+     League Category: {{current_user.league_category}} <br>
+     Age: {{current_user.age}} <br>
 </div>
 <br>
 
