--- a/app/templates/profilemy.html
+++ b/app/templates/profilemy.html
@@ -29,11 +29,13 @@
      Role: {{current_user.role}} <br>
      League Category: {{current_user.league_category}} <br>
      Age: {{current_user.age}} <br>
+     Location: {{current_user.location}} <br>
+
+
 </div>
 <br>
 
 
-Role: {{current_user.role}} <br>
 
 
 
