--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -29,7 +29,7 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         {% if current_user.is_anonymous %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('login') }}">Login HERE</a>
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
 
           </li>
         {% else %}
