fixed up the review now should be good to go

--- a/app/templates/cliniclocator.html
+++ b/app/templates/cliniclocator.html
@@ -204,7 +204,7 @@ L.marker([37.7817, -122.2709]).addTo(map).bindPopup(
     "<img src='https://lh3.googleusercontent.com/gps-cs-s/AC9h4npU6GAiApFL2hkncwhF-6h-OBRY2nD__7YQ2McCJuToUjDmK3Nl_UeLQdPsOE5bGFdlQgZUqybRjwuac2smcBVB89vLgqP6-aLsuKk7a3AYP-Qntzhbnj4RACmbhvVM1ulLVVGcug=w408-h306-k-no' alt='William Payne Field' height='200px' width='200px' />"
 );
 L.marker([37.66618555008935, -122.10588200724013]).addTo(map).bindPopup(
-    "<strong>Chabor Colllege Soccer Field</strong><br>" +
+    "<strong>Chabot Colllege Soccer Field</strong><br>" +
     "<b>Schedule:</b> Hours: Monday-Friday 7:00 AM - 10:00 PM<br>" +
     "<b>Quality:</b> 4.9 stars rated<br>" +
     "<b>Address:</b> 25555 Hesperian Blvd, Hayward, CA 94545<br>" +
