--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -16,7 +16,7 @@
                   <a class="nav-link" href="/reviews">Review</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/clinic/map">Map of Oakland</a>
+                  <a class="nav-link" href="/clinic/map">Find Fields<Fieldset:disabled></Fieldset:disabled></a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="/clinic/list">List</a>
