--- a/app/templates/clinic.html
+++ b/app/templates/clinic.html
@@ -1,57 +1,56 @@
-<!-- this is going to look WACKY i am in the midst of working on it. Sorry :( - Sylvie  -->
+<!--this is going to look WACKY i am in the midst of working on it. Sorry :( - Sylvie  -->
+
 
 {% extends 'base.html' %}
 
-    {% block body %}
-    
-    {% if clinic %}
-    
-    {{moment(clinic.createdate).calendar()}} by {{clinic.author.username}} 
-    {% if clinic.modifydate %}
-        modified {{moment(clinic.modifydate).calendar()}}
-    {% endif %}
-    <br>
-        {% if clinic.author == current_user %}
-            <a data-toggle="tooltip" data-placement="top" title="Delete Clinic" href="/clinic/delete/{{clinic.id}}">
-                <img width="40" class="bottom-image" src="/static/delete.png">
-            </a>
-            <a data-toggle="tooltip" data-placement="top" title="Edit Clinic" href="/clinic/edit/{{clinic.id}}">
-                <img width="40" class="bottom-image" src="/static/edit.png">
-            </a>
-        {% endif %}
-    
-        <h1 class="display-5">Name:  {{clinic.name}}</h1>
-        <p class="fs-3 text-break">
-                {{clinic.content}}
-        </p>
-        <p class="fs-3 text-break">
-            {% if clinic.author.image %}
-                <img width="120" class="img-thumbnail float-start me-2" src="data:image;base64,{{base64encode(clinic.author.image.read())}}">
-            {% endif %}
-                {{clinic.content}}
-        </p>
-        <h1 class="display-5">
-            {{clinic.streetAddress}} <br>
-            {{clinic.city}} {{clinic.state}} {{clinic.zipcode}}
-        </h1>
-        <p class="fs-3 text-break"> 
-                {{clinic.content}}
-        </p>
-        <h1 class="display-5">Description: {{clinic.description}}</h1>
-        <p class="fs-3 text-break">
-                {{clinic.content}}
-        </p>
-        
-    {% else %}
-        <h1 class="display-5">No Clinic</h1>
-    {% endif %}
-    
-    {% endblock %}
+
+{% block body %}
 
 
-   <!--{% if clinic.author.image %}
-                <img width="120" class="img-thumbnail float-start me-2" src="data:image;base64,{{base64encode(clinic.author.image.read())}}">
-            {% endif %} 
-            
-            this is the code for the images, i took it out of 
-            the code but even when the code was still there i didn't see the pictures for some reason---> 
+<div class="container my-5">
+   <h1 class="text-center mb-4">Available Soccer Fields</h1>
+
+
+   {% if fields %}
+       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+           {% for field in fields %}
+               <div class="col">
+                   <div class="card h-100 shadow-sm border-0">
+                       {% if field.image %}
+                           <img src="data:image;base64,{{ base64encode(field.image.read()) }}" class="card-img-top rounded-top" alt="{{ field.name }}">
+                       {% else %}
+                           <img src="/static/default_field.jpg" class="card-img-top rounded-top" alt="Default Field Image">
+                       {% endif %}
+                       <div class="card-body">
+                           <h5 class="card-title">{{ field.name }}</h5>
+                           <p class="card-text">
+                               <strong>Address:</strong><br>
+                               {{ field.streetAddress }}<br>
+                               {{ field.city }}, {{ field.state }} {{ field.zipcode }}
+                           </p>
+                           {% if field.description %}
+                               <p class="card-text"><strong>Description:</strong> {{ field.description }}</p>
+                           {% endif %}
+                       </div>
+                       <div class="card-footer bg-white border-top-0">
+                           <a href="/field/{{ field.id }}" class="btn btn-primary w-100">View Details / Reserve</a>
+                       </div>
+                   </div>
+               </div>
+           {% endfor %}
+       </div>
+   {% else %}
+       <p class="text-center">No soccer fields available at the moment.</p>
+   {% endif %}
+</div>
+
+
+{% endblock %}
+
+
+  <!--{% if clinic.author.image %}
+               <img width="120" class="img-thumbnail float-start me-2" src="data:image;base64,{{base64encode(clinic.author.image.read())}}">
+           {% endif %}
+          
+           this is the code for the images, i took it out of
+           the code but even when the code was still there i didn't see the pictures for some reason--->
